# ZDlib

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/conan/: ConanRun.cmake  conanfile.py  glew_recipe.py  glfw_recipe.py  openmp_recipe.py  portaudio_recipe.py
cmake/toolchains/: darwin.toolchain
example/: demo.cpp  dots.glsl  drawing.cpp  makefile  orbits.cpp  pattern.glsl  sound.cpp  water.cpp
src/: file_test.cpp  image_test.cpp  main.cpp  minimal_test.cpp  model_test.cpp  network_test.cpp  shader_test.cpp  stb_image.cpp  zdlib.cpp  zdlib.h
src/ZD/: Animation.cpp  Animation.hpp  BufferBuilder.cpp  BufferBuilder.hpp  BufferReader.cpp  BufferReader.hpp  Color.hpp  Entity.cpp  Entity.hpp  File.cpp  File.hpp  FileWatch.cpp  FileWatch.hpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageLoader.cpp  ImageLoader.hpp  Input.cpp  Input.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  NetworkSocket.cpp  NetworkSocket.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Painter.cpp  Painter.hpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  ScaledPainter.cpp  ScaledPainter.hpp  Screen.cpp  Screen.hpp  ScreenInput.cpp  ScreenInput.hpp  Shader.cpp  (+17 more)
src/ZD/3rd/: stb_image.h
test/: CMakeLists.txt  file_test.cpp  image_test.cpp  main.cpp  model_test.cpp  network_test.cpp  shader_test.cpp
test/images/: shader_f.glsl  test.txt
